--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="dim_20dp">20dp</dimen>
     <dimen name="dim_10dp">10dp</dimen>
     <dimen name="dim_5dp">5dp</dimen>
+    <dimen name="dim_18sp">18sp</dimen>
+    <dimen name="button_height">50dp</dimen>
 </resources>
