--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,38 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="EditTextOutLineBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextColor">@color/colorPrimary</item>
+        <item name="boxStrokeColor">@color/colorPrimary</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="errorTextColor">@android:color/holo_red_dark</item>
+        <item name="android:minHeight">@dimen/text_field_min_height</item>
+    </style>
+
+    <style name="BodyText" parent="Widget.AppCompat.EditText">
+        <item name="android:textSize">@dimen/body_text_size</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="blue_button" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/text_field_min_height</item>
+        <item name="android:padding">@dimen/mid_space</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/body_text_size</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="primary_button" parent="blue_button">
+        <item name="rippleColor">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <dimen name="text_field_min_height">48dp</dimen>
+    <dimen name="body_text_size">15sp</dimen>
+    <dimen name="mid_space">16dp</dimen>
+    <color name="text_color">#000000</color>
 </resources>
