--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,30 @@
     <color name="white">#ffffff</color>
     <color name="gray">#9C9FAF</color>
     <color name="btn_ripple_blue">#5F639C</color>
+
+    <!-- dots inactive colors -->
+    <color name="dot_dark_screen1">#3700B3</color>
+    <color name="dot_dark_screen2">#3700B3</color>
+    <color name="dot_dark_screen3">#3700B3</color>
+    <color name="dot_dark_screen4">#3700B3</color>
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#BB86FC</color>
+    <color name="dot_light_screen2">#BB86FC</color>
+    <color name="dot_light_screen3">#BB86FC</color>
+    <color name="dot_light_screen4">#BB86FC</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+    </array>
 </resources>
