--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -27,34 +27,22 @@
             android:layout_height="@dimen/dim_30dp"
             android:gravity="center"
             android:orientation="horizontal" />
-
-        <LinearLayout
-            android:id="@+id/login_with_mobile"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:padding="@dimen/dim_10dp"
-            android:background="@drawable/login_mobile_bg">
             <Button
+                android:id="@+id/login_with_mobile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/login_btn_text"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/login_with_fb"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:padding="@dimen/dim_10dp"
-            android:background="@drawable/fb_bg">
+                android:text="Login with Mobile Number"
+                android:textColor="#ffffff"
+                android:background="@drawable/login_mobile_bg"/>
             <Button
+                android:id="@+id/login_with_fb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/fb_text"/>
+                android:paddingLeft="@dimen/dim_10dp"
+                android:drawableLeft="@drawable/ic_facebook"
+                android:text="Facebook Login"
+                android:textColor="#ffffff"
+                android:background="@drawable/fb_bg"/>
         </LinearLayout>
-
-    </LinearLayout>
-
 
 </RelativeLayout>
