--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:padding="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -25,11 +26,13 @@
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="Enter your mobile number"
+            android:textColor="#ffffff"
             android:textSize="20sp" />
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dim_40dp"
+            android:background="@drawable/edittext_border"/>
 
         <Button
             android:layout_width="match_parent"
