--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="VERIFY OTP"
+            android:textColor="#ffffff"
             android:layout_marginTop="20dp"
             android:background="@drawable/round_button"
             android:textSize="@dimen/dim_18sp" />
