--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="dot_light_screen2">#BB86FC</color>
     <color name="dot_light_screen3">#BB86FC</color>
     <color name="dot_light_screen4">#BB86FC</color>
+    <color name="form_bg_color">#eeeeee</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
