--- a/app/src/main/res/drawable-v24/round_button.xml
+++ b/app/src/main/res/drawable-v24/round_button.xml
@@ -1,10 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:radius="20dp"
-        android:topRightRadius="20dp" />
+        android:radius="@dimen/dim_30dp"/>
     <gradient
         android:angle="0"
         android:centerColor="#1F9BD3"
