--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/nav_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dim_100dp"
+        android:layout_height="@dimen/dim_120dp"
         android:background="@drawable/nav_bar_bg"
         android:layout_marginStart="@dimen/dim_minus_25dp"
         android:layout_marginEnd="@dimen/dim_minus_25dp"
@@ -24,13 +24,29 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_weight="1">
+            <ImageView
+                android:layout_width="@dimen/dim_40dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:src="@drawable/home"
+                android:layout_marginTop="@dimen/dim_5dp"
+                android:layout_gravity="center"
+                android:contentDescription="" />
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_weight="1">
+            <ImageView
+                android:layout_width="@dimen/dim_40dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:src="@drawable/assignment"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dim_5dp"
+                android:contentDescription="" />
 
         </LinearLayout>
 
@@ -53,13 +69,30 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_weight="1">
+            <ImageView
+                android:layout_width="@dimen/dim_40dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:src="@drawable/outline"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dim_5dp"
+                android:contentDescription="" />
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="@dimen/dim_40dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:src="@drawable/account"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dim_5dp"
+                android:contentDescription=""/>
 
         </LinearLayout>
     </LinearLayout>
