--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="dim_25sp">25sp</dimen>
     <dimen name="dim_30sp">30sp</dimen>
     <dimen name="dim_45dp">45dp</dimen>
+    <dimen name="dim_300dp">300dp</dimen>
 </resources>
