--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,7 +18,10 @@
     <dimen name="dim_3dp">3dp</dimen>
     <dimen name="dim_16sp">16sp</dimen>
     <dimen name="dim_25sp">25sp</dimen>
+    <dimen name="dim_20sp">20sp</dimen>
     <dimen name="dim_30sp">30sp</dimen>
     <dimen name="dim_45dp">45dp</dimen>
     <dimen name="dim_300dp">300dp</dimen>
+    <dimen name="dim_12sp">12sp</dimen>
+    <dimen name="dim_14sp">14sp</dimen>
 </resources>
