--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="external_files" path="."/>
+<paths>
+    <!--<external-cache-path name="external_files" path="."/>
+    <external-path name="external_files" path="."/>-->
+    <files-path name="my_images" path="images/"/>
+    <files-path name="my_docs" path="docs/"/>
 </paths>
