--- a/app/src/main/res/layout/item_pdf_list.xml
+++ b/app/src/main/res/layout/item_pdf_list.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainpdflayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dim_120dp"
         android:orientation="vertical">
 
         <ImageView
